--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,6 @@ gauges_id: 503c5af6613f5d0f19000027
 permalink: /news/:year/:month/:day/:title/
 excerpt_separator: noifniof3nioaniof3nioafafinoafnoif
 repository: https://github.com/jekyll/jekyll
+
+baseurl: /jekyllrb.com.jp
+url: /jekyllrb.com.jp
