Change markdown from Default to kramdown

--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,6 @@ permalink: /news/:year/:month/:day/:title/
 excerpt_separator: noifniof3nioaniof3nioafafinoafnoif
 repository: https://github.com/jekyll/jekyll
 
+markdown: kramdown
 baseurl: /jekyllrb.com.jp
 url: /jekyllrb.com.jp
