rakeにjekyll buildして正常に終わるかのタスクを追加し、.travis.ymlにもタスク追加 #101
また、rakeタスク名をそれぞれtogglate, jekyllに変更

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: ruby
 rvm:
   - 2.1.0
 install: gem install togglate
+install: gem install jekyll
 script:
-  - rake test
+  - rake togglate
+  - rake jekyll
