gemをjekyllからgithub-pagesに変更

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm:
   - 2.1.0
 install: gem install togglate
-install: gem install jekyll
+install: gem install github-pages
 script:
   - rake togglate
   - rake jekyll
