本家分を取り込んで問題のないファイルをマージ

--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -14,6 +14,7 @@
   - drafts
   - pages
   - variables
+  - collections
   - datafiles
   - assets
   - migrations
@@ -30,6 +31,7 @@
   docs:
   - github-pages
   - deployment-methods
+  - continuous-integration
 
 - title: Miscellaneous
   docs:
