定数を.envに逃がした

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-REPO=jekyll/jekyll
+HOST=https://github.com
+HOST_RAW=https://raw.githubusercontent.com
+PARENT_USER=jekyll
+PARENT_REPO=jekyll
 REVISION=master
 DIR=site
