ライブラリが環境変数repoを使ってたので復活

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 HOST=https://github.com
 HOST_RAW=https://raw.githubusercontent.com
-PARENT_USER=jekyll
-PARENT_REPO=jekyll
+REPO=jekyll/jekyll
 REVISION=master
 DIR=site
