--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,67 @@
-markdown: kramdown
-highlighter: pygments
-permalink: /news/:year/:month/:day/:title/
-excerpt_separator: ""
-
-gauges_id: 503c5af6613f5d0f19000027
-google_analytics_id: UA-50755011-1
-
+---
+version: 3.8.5
+min_ruby_version: 2.4.0
+name: Jekyll • シンプルで、ブログのような、静的サイト
+# name: Jekyll • Simple, blog-aware, static sites
+description: プレーンテキストを静的サイトやブログに変えましょう
+# description: Transform your plain text into static websites and blogs
+url: http://jekyllrb-ja.github.io
+# url: https://jekyllrb.com
 repository: https://github.com/jekyll/jekyll
-help_url: https://github.com/jekyll/jekyll-help
+timezone: America/Los_Angeles
+# twitter:
+#  username: jekyllrb
+logo: "/img/logo-2x.png"
+# google_analytics_id: UA-50755011-1
+# google_site_verification: onQcXpAvtHBrUI5LlroHNE_FP0b2qvFyPq7VZw36iEY
 
 collections:
   docs:
+    permalink: "/:collection/:path/"
+    output: true
+  posts:
+    permalink: "/news/:year/:month/:day/:title/"
+    output: true
+  tutorials:
     output: true
 
-name: Jekyll • Simple, blog-aware, static sites
-description: Transform your plain text into static websites and blogs
-# url: http://jekyllrb.com
+defaults:
+- scope:
+    path: _docs
+    type: docs
+  values:
+    layout: docs
+- scope:
+    path: _posts
+    type: posts
+  values:
+    layout: news_item
+- scope:
+    path: ""
+  values:
+    image: "/img/jekyll-og.png"
 
-gems:
-  - jekyll-feed
+plugins:
+- jekyll-avatar
+- jekyll-feed
+- jekyll-mentions
+- jekyll-redirect-from
+- jekyll-seo-tag
+- jekyll-sitemap
+- jemoji
 
-# jekyllrb-ja
-exclude: [vendor, diff]
-url: http://jekyllrb-ja.github.io
+feed:
+  categories:
+    - release
+
+sass:
+  style: compressed
+
+exclude:
+- .gitignore
+- .jekyll-cache
+- CNAME
+- icomoon-selection.json
+- README.md
+- diff
+- vendor
