--- a/_data/jekyll_filters.yml
+++ b/_data/jekyll_filters.yml
@@ -16,10 +16,290 @@
 #      backslashes to escape quotes.
 # ---------------------------------------------------------------------------------------
 #
+# - name: Relative URL
+#   description: >-
+#     Prepend the <code>baseurl</code> value to the input. Useful if
+#     your site is hosted at a subpath rather than the root of the domain.
+#   examples:
+#     - input: '{{ "/assets/style.css" | relative_url }}'
+#       output: '/my-baseurl/assets/style.css'
+#
+# #
+#
+# - name: Absolute URL
+#   description: Prepend the <code>url</code> and <code>baseurl</code> value to the input.
+#   examples:
+#     - input: '{{ "/assets/style.css" | absolute_url }}'
+#       output: 'http://example.com/my-baseurl/assets/style.css'
+#
+# #
+#
+# - name: Date to XML Schema
+#   description: Convert a Date into XML Schema (ISO 8601) format.
+#   examples:
+#     - input: '{{ site.time | date_to_xmlschema }}'
+#       output: '2008-11-07T13:07:54-08:00'
+#
+# #
+#
+# - name: Date to RFC-822 Format
+#   description: Convert a Date into the RFC-822 format used for RSS feeds.
+#   examples:
+#     - input: '{{ site.time | date_to_rfc822 }}'
+#       output: 'Mon, 07 Nov 2008 13:07:54 -0800'
+#
+# #
+#
+# - name: Date to String
+#   description: Convert a date to short format.
+#   examples:
+#     - input: '{{ site.time | date_to_string }}'
+#       output: '07 Nov 2008'
+#
+# #
+#
+# - name: Date to String in ordinal US style
+#   description: 'Format a date to ordinal, US, short format.'
+#   version_badge: 3.8.0
+#   examples:
+#     - input: '{{ site.time | date_to_string: "ordinal", "US" }}'
+#       output: 'Nov 7th, 2008'
+#
+# #
+#
+# - name: Date to Long String
+#   description: Format a date to long format.
+#   examples:
+#     - input: '{{ site.time | date_to_long_string }}'
+#       output: '07 November 2008'
+#
+# #
+#
+# - name: Date to Long String in ordinal UK style
+#   description: 'Format a date to ordinal, UK, long format.'
+#   version_badge: 3.8.0
+#   examples:
+#     - input: '{{ site.time | date_to_long_string: "ordinal" }}'
+#       output: '7th November 2008'
+#
+# #
+#
+# - name: Where
+#   description: Select all the objects in an array where the key has the given value.
+#   examples:
+#     - input: '{{ site.members | where:"graduation_year","2014" }}'
+#       output:
+#
+# #
+#
+# - name: Where Expression
+#   description: Select all the objects in an array where the expression is true.
+#   version_badge: 3.2.0
+#   examples:
+#     - input: |-
+#         {{ site.members | where_exp:"item",
+#         "item.graduation_year == 2014" }}
+#       output:
+#     - input: |-
+#         {{ site.members | where_exp:"item",
+#         "item.graduation_year < 2014" }}
+#       output:
+#     - input: |-
+#         {{ site.members | where_exp:"item",
+#         "item.projects contains 'foo'" }}
+#       output:
+#
+# #
+#
+# - name: Group By
+#   description: Group an array's items by a given property.
+#   examples:
+#     - input: '{{ site.members | group_by:"graduation_year" }}'
+#       output: |-
+#         [{"name"=>"2013", "items"=>[...]},
+#         {"name"=>"2014", "items"=>[...]}]
+#
+# #
+#
+# - name: Group By Expression
+#   description: Group an array's items using a Liquid expression.
+#   version_badge: 3.4.0
+#   examples:
+#     - input: |-
+#         {{ site.members | group_by_exp: "item",
+#         "item.graduation_year | truncate: 3, ''" }}
+#       output: |-
+#         [{"name"=>"201", "items"=>[...]},
+#         {"name"=>"200", "items"=>[...]}]
+#
+# #
+#
+# - name: XML Escape
+#   description: Escape some text for use in XML.
+#   examples:
+#     - input: '{{ page.content | xml_escape }}'
+#       output:
+#
+# #
+#
+# - name: CGI Escape
+#   description: >-
+#     CGI escape a string for use in a URL. Replaces any special characters
+#     with appropriate <code>%XX</code> replacements. CGI escape normally
+#     replaces a space with a plus <code>+</code> sign.
+#   examples:
+#     - input: '{{ "foo, bar; baz?" | cgi_escape }}'
+#       output: 'foo%2C+bar%3B+baz%3F'
+#
+# #
+#
+# - name: URI Escape
+#   description: >-
+#     Percent encodes any special characters in a URI.
+#     URI escape normally replaces a space with <code>%20</code>.
+#     <a href="https://en.wikipedia.org/wiki/Percent-encoding#Types_of_URI_characters">Reserved characters</a>
+#     will not be escaped.
+#   examples:
+#     - input: '{{ "http://foo.com/?q=foo, \bar?" | uri_escape }}'
+#       output: 'http://foo.com/?q=foo,%20%5Cbar?'
+#
+# #
+#
+# - name: Number of Words
+#   description: Count the number of words in some text.
+#   examples:
+#     - input: '{{ page.content | number_of_words }}'
+#       output: 1337
+#
+# #
+#
+# - name: Array to Sentence
+#   description: >-
+#     Convert an array into a sentence. Useful for listing tags.
+#     Optional argument for connector.
+#   examples:
+#     - input: '{{ page.tags | array_to_sentence_string }}'
+#       output: 'foo, bar, and baz'
+#     - input: '{{ page.tags | array_to_sentence_string: "or" }}'
+#       output: 'foo, bar, or baz'
+#
+# #
+#
+# - name: Markdownify
+#   description: Convert a Markdown-formatted string into HTML.
+#   examples:
+#     - input: '{{ page.excerpt | markdownify }}'
+#       output:
+#
+# #
+#
+# - name: Smartify
+#   description: 'Convert "quotes" into &ldquo;smart quotes.&rdquo;'
+#   examples:
+#     - input: '{{ page.title | smartify }}'
+#       output:
+#
+# #
+#
+# - name: Converting Sass/SCSS
+#   description: Convert a Sass- or SCSS-formatted string into CSS.
+#   examples:
+#     - input: '{{ some_sass | sassify }}'
+#       output:
+#     - input: '{{ some_scss | scssify }}'
+#       output:
+#
+# #
+#
+# - name: Slugify
+#   description: Convert a string into a lowercase URL "slug". See below for options.
+#   examples:
+#     - input: '{{ "The _config.yml file" | slugify }}'
+#       output: 'the-config-yml-file'
+#     - input: '{{ "The _config.yml file" | slugify: "pretty" }}'
+#       output: 'the-_config.yml-file'
+#     - input: '{{ "The _cönfig.yml file" | slugify: "ascii" }}'
+#       output: 'the-c-nfig-yml-file'
+#     - input: '{{ "The cönfig.yml file" | slugify: "latin" }}'
+#       output: 'the-config-yml-file'
+#
+# #
+#
+# - name: Data To JSON
+#   description: Convert Hash or Array to JSON.
+#   examples:
+#     - input: '{{ site.data.projects | jsonify }}'
+#       output:
+#
+# #
+#
+# - name: Normalize Whitespace
+#   description: Replace any occurrence of whitespace with a single space.
+#   examples:
+#     - input: '{{ "a \n b" | normalize_whitespace }}'
+#       output:
+#
+# #
+#
+# - name: Sort
+#   description: >-
+#     Sort an array. Optional arguments for hashes
+#     1.&nbsp;property name
+#     2.&nbsp;nils order (<em>first</em> or <em>last</em>).
+#   examples:
+#     - input: '{{ page.tags | sort }}'
+#       output:
+#     - input: '{{ site.posts | sort: "author" }}'
+#       output:
+#     - input: '{{ site.pages | sort: "title", "last" }}'
+#       output:
+#
+# #
+#
+# - name: Sample
+#   description: 'Pick a random value from an array. Optionally, pick multiple values.'
+#   examples:
+#     - input: '{{ site.pages | sample }}'
+#       output:
+#     - input: '{{ site.pages | sample: 2 }}'
+#       output:
+#
+# #
+#
+# - name: To Integer
+#   description: Convert a string or boolean to integer.
+#   examples:
+#     - input: '{{ some_var | to_integer }}'
+#       output:
+#
+# #
+#
+# - name: Array Filters
+#   description: >-
+#     Push, pop, shift, and unshift elements from an Array.
+#     These are <strong>NON-DESTRUCTIVE</strong>, i.e. they do not mutate the array,
+#     but rather make a copy and mutate that.
+#   examples:
+#     - input: '{{ page.tags | push: "Spokane" }}'
+#       output: '["Seattle", "Tacoma", "Spokane"]'
+#     - input: '{{ page.tags | pop }}'
+#       output: '["Seattle"]'
+#     - input: '{{ page.tags | shift }}'
+#       output: '["Tacoma"]'
+#     - input: '{{ page.tags | unshift: "Olympia" }}'
+#       output: '["Olympia", "Seattle", "Tacoma"]'
+#
+# #
+#
+# - name: Inspect
+#   description: Convert an object into its String representation for debugging.
+#   examples:
+#     - input: '{{ some_var | inspect }}'
+#       output:
+
 - name: Relative URL
   description: >-
-    Prepend the <code>baseurl</code> value to the input. Useful if
-    your site is hosted at a subpath rather than the root of the domain.
+    入力値の前に<code>baseurl</code>を追加する。サイトがrootドメインの場合よりサブパスでホストされている場合に便利です。
   examples:
     - input: '{{ "/assets/style.css" | relative_url }}'
       output: '/my-baseurl/assets/style.css'
@@ -27,7 +307,7 @@
 #
 
 - name: Absolute URL
-  description: Prepend the <code>url</code> and <code>baseurl</code> value to the input.
+  description: 入力値の前に<code>url</code>と<code>baseurl</code>を追加する。
   examples:
     - input: '{{ "/assets/style.css" | absolute_url }}'
       output: 'http://example.com/my-baseurl/assets/style.css'
@@ -35,7 +315,7 @@
 #
 
 - name: Date to XML Schema
-  description: Convert a Date into XML Schema (ISO 8601) format.
+  description: DateをXML Schema (ISO 8601)フォーマットに変換する。
   examples:
     - input: '{{ site.time | date_to_xmlschema }}'
       output: '2008-11-07T13:07:54-08:00'
@@ -43,7 +323,7 @@
 #
 
 - name: Date to RFC-822 Format
-  description: Convert a Date into the RFC-822 format used for RSS feeds.
+  description: DateをRSSフィードで使うthe RFC-822フォーマットに変換する。
   examples:
     - input: '{{ site.time | date_to_rfc822 }}'
       output: 'Mon, 07 Nov 2008 13:07:54 -0800'
@@ -51,7 +331,7 @@
 #
 
 - name: Date to String
-  description: Convert a date to short format.
+  description: dateをshortフォーマットに変換する。
   examples:
     - input: '{{ site.time | date_to_string }}'
       output: '07 Nov 2008'
@@ -68,7 +348,7 @@
 #
 
 - name: Date to Long String
-  description: Format a date to long format.
+  description: dateをlongフォーマットにする。
   examples:
     - input: '{{ site.time | date_to_long_string }}'
       output: '07 November 2008'
@@ -85,7 +365,7 @@
 #
 
 - name: Where
-  description: Select all the objects in an array where the key has the given value.
+  description: キーで指定した値を持つ配列内のオブジェクトを全て選択する。
   examples:
     - input: '{{ site.members | where:"graduation_year","2014" }}'
       output:
@@ -93,7 +373,7 @@
 #
 
 - name: Where Expression
-  description: Select all the objects in an array where the expression is true.
+  description: 式がtrueになる配列内の全てのオブジェクトを選択する。
   version_badge: 3.2.0
   examples:
     - input: |-
@@ -112,7 +392,7 @@
 #
 
 - name: Group By
-  description: Group an array's items by a given property.
+  description: 指定したプロパティで配列内のアイテムをグループ化する。
   examples:
     - input: '{{ site.members | group_by:"graduation_year" }}'
       output: |-
@@ -122,7 +402,7 @@
 #
 
 - name: Group By Expression
-  description: Group an array's items using a Liquid expression.
+  description: Liquidの式を使用して、配列内のアイテムをグループ化する。
   version_badge: 3.4.0
   examples:
     - input: |-
@@ -135,7 +415,7 @@
 #
 
 - name: XML Escape
-  description: Escape some text for use in XML.
+  description: XMLで使用するためにテキストをエスケープする。
   examples:
     - input: '{{ page.content | xml_escape }}'
       output:
@@ -144,9 +424,7 @@
 
 - name: CGI Escape
   description: >-
-    CGI escape a string for use in a URL. Replaces any special characters
-    with appropriate <code>%XX</code> replacements. CGI escape normally
-    replaces a space with a plus <code>+</code> sign.
+    CGI escapeはURLで使用する文字列をエスケープする。特殊文字を適切な<code>%XX</code>に置き換える。CGI escapeは通常、スペースをプラス<code>+</code>にする。
   examples:
     - input: '{{ "foo, bar; baz?" | cgi_escape }}'
       output: 'foo%2C+bar%3B+baz%3F'
@@ -155,10 +433,7 @@
 
 - name: URI Escape
   description: >-
-    Percent encodes any special characters in a URI.
-    URI escape normally replaces a space with <code>%20</code>.
-    <a href="https://en.wikipedia.org/wiki/Percent-encoding#Types_of_URI_characters">Reserved characters</a>
-    will not be escaped.
+    URI内の特殊文字をパーセントエンコードする。URIエスケープは通常スペースを<code>%20</code>に置き換る。<a href="https://en.wikipedia.org/wiki/Percent-encoding#Types_of_URI_characters" target="_blank">予約文字</a>はエスケープされない。
   examples:
     - input: '{{ "http://foo.com/?q=foo, \bar?" | uri_escape }}'
       output: 'http://foo.com/?q=foo,%20%5Cbar?'
@@ -166,7 +441,7 @@
 #
 
 - name: Number of Words
-  description: Count the number of words in some text.
+  description: テキストのワード数を数える。
   examples:
     - input: '{{ page.content | number_of_words }}'
       output: 1337
@@ -175,8 +450,7 @@
 
 - name: Array to Sentence
   description: >-
-    Convert an array into a sentence. Useful for listing tags.
-    Optional argument for connector.
+    配列をセンテンスに変換する。タグのリスト化に便利。オプションで接続文字を指定できる。
   examples:
     - input: '{{ page.tags | array_to_sentence_string }}'
       output: 'foo, bar, and baz'
@@ -186,7 +460,7 @@
 #
 
 - name: Markdownify
-  description: Convert a Markdown-formatted string into HTML.
+  description: Markdown-formatted stringをHTMLに変換する。
   examples:
     - input: '{{ page.excerpt | markdownify }}'
       output:
@@ -194,7 +468,7 @@
 #
 
 - name: Smartify
-  description: 'Convert "quotes" into &ldquo;smart quotes.&rdquo;'
+  description: '"quotes"を&ldquo;smart quotes.&rdquo;に変換する。'
   examples:
     - input: '{{ page.title | smartify }}'
       output:
@@ -202,7 +476,7 @@
 #
 
 - name: Converting Sass/SCSS
-  description: Convert a Sass- or SCSS-formatted string into CSS.
+  description: Sass-やSCSS-formatted stringをCSSに変換する。
   examples:
     - input: '{{ some_sass | sassify }}'
       output:
@@ -212,7 +486,7 @@
 #
 
 - name: Slugify
-  description: Convert a string into a lowercase URL "slug". See below for options.
+  description: stringを小文字のURL "slug"に変換する。オプションは下記をご覧ください。
   examples:
     - input: '{{ "The _config.yml file" | slugify }}'
       output: 'the-config-yml-file'
@@ -226,7 +500,7 @@
 #
 
 - name: Data To JSON
-  description: Convert Hash or Array to JSON.
+  description: HashやArrayをJSONに変換。
   examples:
     - input: '{{ site.data.projects | jsonify }}'
       output:
@@ -234,7 +508,7 @@
 #
 
 - name: Normalize Whitespace
-  description: Replace any occurrence of whitespace with a single space.
+  description: すべての空白を単一の空白に置き換える。
   examples:
     - input: '{{ "a \n b" | normalize_whitespace }}'
       output:
@@ -243,9 +517,9 @@
 
 - name: Sort
   description: >-
-    Sort an array. Optional arguments for hashes
-    1.&nbsp;property name
-    2.&nbsp;nils order (<em>first</em> or <em>last</em>).
+    配列をソート。ハッシュのオプション引数
+    1.&nbsp;プロパティ名
+    2.&nbsp;nils order (<em>first</em>か<em>last</em>).
   examples:
     - input: '{{ page.tags | sort }}'
       output:
@@ -257,7 +531,7 @@
 #
 
 - name: Sample
-  description: 'Pick a random value from an array. Optionally, pick multiple values.'
+  description: '配列からランダムに取得。オプションで複数を取得可能。 '
   examples:
     - input: '{{ site.pages | sample }}'
       output:
@@ -267,7 +541,7 @@
 #
 
 - name: To Integer
-  description: Convert a string or boolean to integer.
+  description: stringやbooleanをintegerに変換。
   examples:
     - input: '{{ some_var | to_integer }}'
       output:
@@ -276,9 +550,7 @@
 
 - name: Array Filters
   description: >-
-    Push, pop, shift, and unshift elements from an Array.
-    These are <strong>NON-DESTRUCTIVE</strong>, i.e. they do not mutate the array,
-    but rather make a copy and mutate that.
+    配列のPush, pop, shift, and unshift属性。これらは<strong>破壊的ではありません</strong>。つまり、配列を変更するのではなく、コピーを作成してそれを変更します。
   examples:
     - input: '{{ page.tags | push: "Spokane" }}'
       output: '["Seattle", "Tacoma", "Spokane"]'
@@ -292,7 +564,7 @@
 #
 
 - name: Inspect
-  description: Convert an object into its String representation for debugging.
+  description: デバッグのためにオブジェクトをそのStringに変換する。
   examples:
     - input: '{{ some_var | inspect }}'
       output:
