--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 ---
 version: 3.8.6
-min_ruby_version: 2.4.0
 name: Jekyll • シンプルで、ブログのような、静的サイト
 # name: Jekyll • Simple, blog-aware, static sites
 description: プレーンテキストを静的サイトやブログに変えましょう
@@ -56,6 +55,8 @@ feed:
 
 sass:
   style: compressed
+
+strict_front_matter: true
 
 exclude:
 - .gitignore
