--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ---
-version: 3.8.6
+version: 4.0.0
 name: Jekyll • シンプルで、ブログのような、静的サイト
 # name: Jekyll • Simple, blog-aware, static sites
 description: プレーンテキストを静的サイトやブログに変えましょう
@@ -13,7 +13,6 @@ timezone: America/Los_Angeles
 logo: "/img/logo-2x.png"
 # google_analytics_id: UA-50755011-1
 # google_site_verification: onQcXpAvtHBrUI5LlroHNE_FP0b2qvFyPq7VZw36iEY
-
 collections:
   docs:
     permalink: "/:collection/:path/"
@@ -23,7 +22,6 @@ collections:
     output: true
   tutorials:
     output: true
-
 defaults:
 - scope:
     path: _docs
@@ -36,10 +34,10 @@ defaults:
   values:
     layout: news_item
 - scope:
-    path: ""
+    path: ''
   values:
     image: "/img/jekyll-og.png"
-
+future: true
 plugins:
 - jekyll-avatar
 - jekyll-feed
@@ -48,19 +46,15 @@ plugins:
 - jekyll-seo-tag
 - jekyll-sitemap
 - jemoji
-
 feed:
   categories:
-    - release
-
+  - release
 sass:
   style: compressed
-
 strict_front_matter: true
-
 exclude:
-- .gitignore
-- .jekyll-cache
+- ".gitignore"
+- ".jekyll-cache"
 - CNAME
 - icomoon-selection.json
 - README.md
